k3s/monaco-beaute/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monaco-beaute
  namespace: alex-monaco-beaute
spec:
  selector:
    app: monaco-beaute
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
