k3s/monaco-beaute/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monaco-beaute
  namespace: alex-monaco-beaute
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - monaco-beaute.lab.vlxx.fr
      secretName: monaco-beaute-tls
  rules:
    - host: monaco-beaute.lab.vlxx.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monaco-beaute
                port:
                  number: 80
